# base_graph

./: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  base_gui.cpp  base_gui.h  main.cpp
inc/: base_graph.h  base_gui.h  base_tools.h  cmd_list.h  group_widgets.h  gui_attributes.h  item_list.h  main_menu.h  main_window.h  modal_window.h  own_fl_widgets.h  own_gui_widgets.h  point.h  shape_factory.h  window.h
inc/algorithm/: t_rb_tree.h
inc/math/: math_primitives.h
src/: base_graph.cpp  base_gui.cpp  base_tools.cpp  group_widgets.cpp  item_list.cpp  main_menu.cpp  main_window.cpp  modal_window.cpp  own_fl_widgets.cpp  own_gui_widgets.cpp  shape_factory.cpp  window.cpp
src/math/: math_primitives.cpp
trush/: base_data.cpp  base_data.h  base_gui.cpp  base_gui.h
